@@ -170,57 +170,42 @@ enum {
 };
 
 
-/* define this > 0 to be able to use the comfortable callback */
-#define THROTTLE_OFFSET  1
-
-/* throttle types: used as actions in a factory-generated menu */
+/* Throttle types */
 enum {
-  NO_THROTTLE,
-  PARANOID_THROTTLE = THROTTLE_OFFSET,
+  PARANOID_THROTTLE,
   SNEAKY_THROTTLE,
   POLITE_THROTTLE,
   NORMAL_THROTTLE,
   AGRESSIVE_THROTTLE,
-  INSANE_THROTTLE
+  INSANE_THROTTLE,
+  NO_THROTTLE
 };
 
-
-/* define this > 0 to be able to use the comfortable callback */
-#define RESOLVE_OFFSET 1
-
-/* reverse resolving options */
+/* Reverse resolving options */
 enum {
-  NO_RESOLVE,
-  ALWAYS_RESOLVE = RESOLVE_OFFSET,
+  ALWAYS_RESOLVE,
   DEFAULT_RESOLVE,
-  NEVER_RESOLVE
+  NEVER_RESOLVE,
+  NO_RESOLVE
 };
-
-
-/* define this > 0 to be able to use the comfortable callback */
-#define PROTPORT_OFFSET 1
 
 /* scanning mode (which ports/protocols) options */
 enum {
-  NO_PROTPORT,
-  DEFAULT_PROTPORT = PROTPORT_OFFSET,
+  DEFAULT_PROTPORT,
   ALL_PROTPORT,
   FAST_PROTPORT,
-  GIVEN_PROTPORT
+  GIVEN_PROTPORT,
+  NO_PROTPORT
 };
-
-
-/* define this > 0 to be able to use the comfortable callback */
-#define VERBOSE_OFFSET 1
 
 /* verbosity options */
 enum {
-  NO_VERBOSE,
-  QUIET_VERBOSE = VERBOSE_OFFSET,
+  QUIET_VERBOSE,
   V1_VERBOSE,
   V2_VERBOSE,
   D1_VERBOSE,
-  D2_VERBOSE
+  D2_VERBOSE,
+  NO_VERBOSE
 };
 
 
